[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quicktoken"
version = "0.1.0"
description = "A CLI tool to count tokens in files using GPT tokenizers"
requires-python = ">=3.12"
dependencies = [
    "tiktoken>=0.9.0",
]

[project.scripts]
quicktoken = "quicktoken.main:main"
